--- a/dados/styles.css
+++ b/dados/styles.css
@@ -88,10 +88,9 @@ aside ul {
 
 aside ul li a {
     text-decoration: none;
-    color: black;
+    color: #0b6931;
     display: block;
     padding: 10px 0;
-    border-bottom: 1px solid #444444;
 }
 
 .content {
