--- a/login/login.css
+++ b/login/login.css
@@ -1,21 +1,33 @@
-/* Estilos gerais para o header */
+body{
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f5f5f5;
+}
+
 header {
-    background-color: #0b6931;
-    color: #fff;
-    padding: 10px;
-    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #1b512d;
 }
 
 .logo {
-    font-size: 24px;
+    display: flex;
+    align-items: center;
 }
 
 .logo-text {
-    color: white;
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 24px;
 }
 
 .logo-highlight {
-    color: #ffd700;
+    color: #ffcc00;
+    font-weight: bold;
+    font-size: 24px;
 }
 
 /* Estilos para a seção de autenticação */
