--- a/login/login.css
+++ b/login/login.css
@@ -30,7 +30,6 @@ header {
     font-size: 24px;
 }
 
-/* Estilos para a seção de autenticação */
 .auth-content {
     max-width: 500px;
     margin: 50px auto;
@@ -102,6 +101,11 @@ button {
     font-size: 16px;
     border-radius: 5px;
     cursor: pointer;
+}
+
+button a{
+    text-decoration: none;
+    color: white;
 }
 
 button:hover {
