--- a/menu/menu.css
+++ b/menu/menu.css
@@ -88,7 +88,7 @@ nav ul li {
 .sidebar ul li a {
     text-decoration: none;
     color: #1b512d;
-    display: ;
+    display: inline ;
     padding: 10px 0;
     
 }
@@ -118,6 +118,10 @@ nav ul li {
     border-radius: 50%;
 }
 
+.user-profile a{
+    color: white;
+}
+
 .main {
     background-color: white;
     padding: 20px;
@@ -140,7 +144,7 @@ nav ul li {
 }
 
 .footer {
-    background-color: #274e13;
+    background-color: #1b512d;
     color: white;
     text-align: center;
     padding: 10px;
