--- a/login/login.css
+++ b/login/login.css
@@ -47,10 +47,11 @@ header {
 .tab-button {
     flex: 1;
     padding: 10px;
-    border: 1px solid #ddd;
+    border: 2px solid #1b512d;
     background-color: #f9f9f9;
     cursor: pointer;
     text-align: center;
+    color: #1b512d;
     
 }
 
